<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="Fernando.Rodriguez.Castro.Registro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblTitle"
                android:id="@+id/lblTitle"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblFirstName"
                android:id="@+id/lblFirstName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtFirstName"
                android:text="@string/txtFirstName"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblSecondName"
                android:id="@+id/lblSecondName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtSecondName"
                android:text="@string/txtFirstName"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblFirstMiddleName"
                android:id="@+id/lblFirstMiddleName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtFirstMiddleName"
                android:text="@string/txtFirstMiddleName"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblSecondMiddleName"
                android:id="@+id/lblSecondMiddleName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtSecondMiddleName"
                android:text="@string/txtSecondMiddleName"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAge"
                android:id="@+id/lblAge" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtAge"
                android:text="@string/txtAge"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblSex"
                android:id="@+id/lblSex" />


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioButtonMasculino"
                    android:id="@+id/radioButtonMasculino"
                    android:checked="true"
                    android:layout_weight="0.50" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioButtonFemenino"
                    android:id="@+id/radioButtonFemenino"
                    android:checked="false"
                    android:layout_weight="0.50" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:textAlignment="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonSaludar"
                    android:elegantTextHeight="true"
                    android:textStyle="bold"
                    android:onClick="sayHello" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="true"
                    android:onClick="borrar"
                    android:text="@string/buttonBorrar"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
